--- a/app/src/main/res/layout/item_jasa_lain_berkala.xml
+++ b/app/src/main/res/layout/item_jasa_lain_berkala.xml
@@ -11,8 +11,8 @@
     android:layout_marginRight="7dp"
     android:layout_marginBottom="4dp"
     android:padding="10dp"
-    app:cardElevation="2dp"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,29 +25,36 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp">
+            android:stretchColumns="*">
 
             <TableRow>
+
+                <TextView
+                    android:id="@+id/tv_masterPart_jasaBerkala"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nama Master Part"
+                    android:textStyle="bold" />
+
+            </TableRow>
+
+            <TableRow android:layout_marginTop="5dp">
 
                 <TextView
                     android:id="@+id/tv_aktifitas_jasaBerkala"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:layout_weight="1"
-                    android:text="Aktivitas Jasa Lain" />
+                    android:text="Aktivitas"
+                    android:textStyle="bold" />
 
             </TableRow>
 
-            <TableRow android:layout_marginTop="10dp">
+            <TableRow android:layout_marginTop="5dp">
 
                 <TextView
                     android:id="@+id/tv_kmPenggantian_jasaBerkala"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:text="Km Penggantian"
                     android:textStyle="bold" />
 
@@ -55,29 +62,29 @@
                     android:id="@+id/tv_kmSaatIni_jasaBerkala"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:layout_weight="1"
-                    android:text="Km Saat Ini" />
+                    android:layout_gravity="end"
+                    android:text="Km Saat Ini"
+                    android:textColor="@color/red_400"
+                    android:textStyle="bold" />
 
             </TableRow>
 
-            <TableRow android:layout_marginTop="10dp">
+            <TableRow android:layout_marginTop="5dp">
+
+                <TextView
+                    android:id="@+id/tv_mekanik_jasaBerkala"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tipe Mekanik"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_waktu_jasaBerkala"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_gravity="end"
                     android:text="Waktu"
                     android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tv_jasa_jasaBerkala"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:layout_weight="1"
-                    android:text="Jasa" />
 
             </TableRow>
 
