--- a/app/src/main/res/layout/item_part_berkala.xml
+++ b/app/src/main/res/layout/item_part_berkala.xml
@@ -25,9 +25,7 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp">
+            android:stretchColumns="*">
 
             <TableRow>
 
@@ -41,23 +39,22 @@
 
             </TableRow>
 
-            <TableRow android:layout_marginTop="10dp">
+            <TableRow android:layout_marginTop="5dp">
 
                 <TextView
-                    android:id="@+id/tv_kmPenggantian_partBerkala"
+                    android:id="@+id/tv_kmBerkala_partBerkala"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:layout_weight="1"
-                    android:text="Km Penggantian" />
+                    android:text="Km Berkala" />
 
                 <TextView
                     android:id="@+id/tv_kmSaatIni_partBerkala"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:layout_weight="1"
-                    android:text="Km Saat Ini" />
+                    android:layout_gravity="end"
+                    android:text="Km Saat Ini / Km Penggantian" />
 
             </TableRow>
 
