--- a/app/src/main/res/layout/activity_daftar_jual_part_.xml
+++ b/app/src/main/res/layout/activity_daftar_jual_part_.xml
@@ -9,44 +9,45 @@
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:orientation="vertical">
 
-            <android.support.design.widget.TextInputLayout
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:padding="10dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="2dp">
 
-                <EditText
-                    android:id="@+id/et_totalHarga_jualPart"
+                <TextView
+                    android:id="@+id/tv_totalHarga_jualPart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:enabled="false"
-                    android:hint="TOTAL"
+                    android:text="TOTAL"
+                    android:padding="10dp"
                     android:textSize="20sp" />
 
-            </android.support.design.widget.TextInputLayout>
+            </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView_jualPart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp" />
+                android:layout_marginTop="20dp"/>
 
             <Button
                 android:id="@+id/btn_simpan_jualPart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|bottom"
-                android:layout_margin="@dimen/fab_margin"
                 android:background="@drawable/btn_rounded_accent"
                 android:text="SIMPAN"
                 android:textColor="@android:color/white"
@@ -54,6 +55,7 @@
 
 
         </LinearLayout>
+
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.AppBarLayout
@@ -66,7 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <include layout="@layout/toolbar"/>
+            <include layout="@layout/btn_search" />
 
         </FrameLayout>
 
