--- a/app/src/main/res/layout/activity_list_basic_3.xml
+++ b/app/src/main/res/layout/activity_list_basic_3.xml
@@ -8,6 +8,9 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="none"
+        android:scrollingCache="true"
+        android:clipToPadding="false"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
