--- a/app/src/main/res/layout/activity_referensikan_otomotives_.xml
+++ b/app/src/main/res/layout/activity_referensikan_otomotives_.xml
@@ -20,7 +20,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/border_solid"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:hint="NAMA PEMILIK">
+                android:hint="KONTAK PERSON">
 
                 <EditText
                     android:id="@+id/et_namaPemilik_ref"
@@ -55,6 +55,22 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:textSize="14sp" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_marginTop="5dp"
+                android:hint="JABATAN">
+
+                <EditText
+                    android:id="@+id/et_jabatan_ref"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:inputType="text" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -184,7 +200,8 @@
                     <CheckBox
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="KIRIM MESSAGE" />
+                        android:text="KIRIM MESSAGE"
+                        android:layout_gravity="center_vertical"/>
 
                     <Button
                         android:id="@+id/btn_simpan_ref"
