--- a/app/src/main/res/layout/item_people_chat.xml
+++ b/app/src/main/res/layout/item_people_chat.xml
@@ -64,7 +64,8 @@
 
 
 
-        </LinearLayout><View
+        </LinearLayout>
+        <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/grey_10" />
