--- a/app/src/main/res/layout/item_total_jual_part.xml
+++ b/app/src/main/res/layout/item_total_jual_part.xml
@@ -1,119 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginLeft="7dp"
+    android:layout_marginRight="7dp"
+    android:layout_marginBottom="4dp"
+    android:padding="5dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="2dp">
 
-    <android.support.v7.widget.CardView
-        android:layout_margin="5dp"
-        app:cardCornerRadius="6dp"
-        app:cardElevation="3dp"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <LinearLayout
-            android:padding="7dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="220dp"
+            <TableLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:orientation="vertical">
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:stretchColumns="*">
 
+                <TableRow>
 
-                <TextView
-                    android:id="@+id/tv_noPart_jualPart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="No. Part"
-                    android:textStyle="bold"
-                    android:textColor="@color/grey_80"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                    <TextView
+                        android:id="@+id/tv_noPart_jualPart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No. Part"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/grey_80"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_namaPart_jualPart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="2"
-                    android:text="Nama Part"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    android:textColor="@color/grey_80"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
+                </TableRow>
 
-                <TextView
-                    android:id="@+id/tv_harga_jualPart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text="Harga"
-                    android:textStyle="bold"
-                    android:textColor="@color/grey_80"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                <TableRow android:layout_marginTop="5dp">
 
-                <TextView
-                    android:id="@+id/tv_disc_jualPart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text="Discount"
-                    android:textStyle="bold"
-                    android:textColor="@color/grey_80"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                    <TextView
+                        android:id="@+id/tv_namaPart_jualPart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="2"
+                        android:text="Nama Part"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/grey_80"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
 
-            </LinearLayout>
+                </TableRow>
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
-                <TextView
+                    <TextView
+                        android:id="@+id/tv_harga_jualPart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Harga"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/grey_80"
+                        android:textStyle="bold" />
 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="2"
-                    android:text=""
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/grey_80"
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/tv_jumlah_jualPart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Jumlah"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/grey_80"
+                        android:textStyle="bold"
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="10dp"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                </TableRow>
 
-                <TextView
-                    android:id="@+id/tv_jumlah_jualPart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text="Jumlah"
-                    android:textStyle="bold"
-                    android:textColor="@color/grey_80"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
-                <TextView
-                    android:id="@+id/tv_total_jualPart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text="Total"
-                    android:textStyle="bold"
-                    android:textColor="@color/grey_80"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                    <TextView
+                        android:id="@+id/tv_disc_jualPart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Discount"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/grey_80"
+                        android:textStyle="bold" />
 
+                    <TextView
+                        android:id="@+id/tv_total_jualPart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Total"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/grey_80"
+                        android:textStyle="bold"
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="10dp"/>
 
-            </LinearLayout>
+                </TableRow>
+
+            </TableLayout>
+
         </LinearLayout>
-    </android.support.v7.widget.CardView>
 
-</FrameLayout>
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
